# autoeq

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  Justfile  README.md  REFERENCES.md
.cargo/: config.toml  mutants.toml
autoeq/: Cargo.toml  Cargo.toml~  README.md
autoeq-cea2034/: Cargo.toml
autoeq-env/: Cargo.toml
autoeq-env/src/: constants.rs  env_utils.rs  lib.rs  log.rs
autoeq-roomsim/: .gitignore  Cargo.toml  Cargo.toml~  build-wasm.sh  pkg
autoeq-roomsim/configs/: home_theater_5_1_4.json
autoeq-roomsim/etc/nginx/: spinorama-roomsim
autoeq-roomsim/src/: bem_solver.rs  lib.rs  scattering_objects.rs
autoeq-roomsim/src/plotting/: index.html  serve.py
autoeq-roomsim/src/plotting/common/: plots.js
autoeq/examples/: cea2034_score.rs
autoeq/fuzz/fuzz_targets/: autoeq_csv.rs
autoeq/src/: cli.rs  error.rs  fir.rs  initial_guess.rs  lib.rs  loss.rs  optim.rs  optim_de.rs  optim_mh.rs  optim_nlopt.rs  param_utils.rs  response.rs  workflow.rs
autoeq/src/constraints/: ceiling.rs  crossover_monotonicity.rs  min_spacing.rs
autoeq/src/loss/: bass_boost.rs  enhanced_weights.rs  phase_aware.rs
autoeq/src/optim/: pareto.rs
autoeq/src/plot/: filter_color.rs  mod.rs  plot_results.rs  ref_lines.rs
autoeq/src/read/: mod.rs  normalize.rs  read_api.rs  source.rs  speaker_suggestions.rs
autoeq/src/roomeq/: config.rs  crossover.rs  eq.rs  fir.rs  group_delay.rs  optimize.rs  phase_utils.rs  progress.rs  types.rs
autoeq/src/workflow/: resume.rs
autoeq/tests/: autoeq_golden_tests.rs  autoeq_integration_test.rs  cli_de_parameters.rs  peq_model_bounds.rs  test_free_filters.rs  test_mh_callback.rs
autoeq/tests/data/roomeq/: test_config_multidriver.json  test_config_stereo.json  test_speaker_right.csv  test_tweeter.csv  test_woofer.csv
builds/: CrossFromLinuxX86.toml  CrossFromMacARM.toml  cross-autoeq.just
crates/autoeq-core/: Cargo.toml
crates/autoeq-core/src/: curve.rs  error.rs  lib.rs  peq_model.rs  phase_utils.rs  response.rs  x2peq.rs
crates/autoeq-measurements/: Cargo.toml
crates/autoeq-measurements/src/: cea2034.rs  lib.rs  quality.rs
crates/autoeq-measurements/src/cea2034/: apply.rs  compute.rs  misc.rs  tests.rs  types.rs
crates/autoeq-measurements/src/read/: clamp.rs  directory.rs  interpolate.rs  normalize.rs  read_api.rs  read_csv.rs  smooth.rs
crates/autoeq-measurements/src/read/read_api/: backend.rs  cea2034_data.rs  fetch.rs  get.rs  types.rs
crates/autoeq-measurements/src/read/source/: load.rs  measurement_ref.rs  measurement_single.rs  measurement_source.rs  tests.rs  types.rs
crates/autoeq-optim/: Cargo.toml
crates/autoeq-optim/src/: initial_guess.rs  lib.rs  loss.rs  optim.rs  problem.rs  roomeq_types.rs  smoothness_penalty_config.rs
crates/autoeq-optim/src/cli/: args.rs  parse.rs  validate.rs
crates/autoeq-optim/src/constraints/: ceiling.rs  min_gain.rs  min_spacing.rs  mod.rs
crates/autoeq-optim/src/loss/: asymmetric.rs  drivers.rs  headphone.rs  multisub.rs  phase_aware.rs  speaker.rs
crates/autoeq-optim/src/loss/drivers/: compute.rs  crossover_type.rs  driver_measurement.rs  drivers_loss_data.rs  misc.rs
crates/autoeq-optim/src/loss/epa/: bark.rs  roughness.rs  score.rs
crates/autoeq-optim/src/loss/epa/score/: compute.rs  default.rs  epa.rs  epa_config.rs  misc.rs  types.rs
crates/autoeq-optim/src/optim/: bo.rs  callback.rs  compute.rs  de.rs  isres.rs  misc.rs  optimize.rs  optimizer_backend.rs  params.rs  pareto.rs  penalty_mode.rs  scalar.rs  setup.rs  smoothness_penalty_config.rs  tests.rs
crates/autoeq-optim/src/optim/de/: autoeq_de_backend.rs  create.rs  misc.rs  tests.rs  types.rs
crates/autoeq-optim/src/optim/loss/strategies/: asymmetric.rs  epa.rs  flat.rs  mod.rs  score.rs
crates/autoeq-optim/src/optim/setup/: misc.rs  perform.rs  progress_callback_config.rs
crates/autoeq-workflow/: Cargo.toml
crates/autoeq-workflow/src/: lib.rs
crates/autoeq-workflow/src/workflow/: config.rs  misc.rs  optimize.rs  tests.rs  types.rs
crates/roomeq-engine/: Cargo.toml
crates/roomeq-engine/src/: lib.rs
crates/roomeq-model/: Cargo.toml
crates/roomeq-model/src/: config.rs  contracts.rs  lib.rs  optim_adapter.rs  preset.rs
crates/roomeq-model/src/config/: audibility_deadband_config.rs  auto_optimizer_config.rs  bass_anchor_results_legacy.rs  bass_management_config.rs  bootstrap_uncertainty_config.rs  cardioid_config.rs  cea2034_correction_config.rs  channel_matching_config.rs  ctc_config.rs  ctc_hrtf_config.rs  ctc_measurement_config.rs  ctc_window_config.rs  dbaconfig.rs  decomposed_correction_serde_config.rs  default.rs  group_delay_optimization_config.rs  high_freq_filter_config.rs  high_frequency_correction_config.rs  misc.rs  mixed_mode_config.rs  multi_sub_group.rs  optimizer_config.rs  optimizer_config_builder.rs  phase_alignment_config.rs  policy.rs  room_config.rs  room_dimensions.rs  speaker_config.rs  speaker_topology.rs  supporting_source_config.rs  supporting_source_group.rs  target_response_config.rs  tests.rs  types.rs  user_preference.rs  validation.rs
crates/roomeq-model/src/config/tests/: core.rs  policies.rs
docs/: AUTOEQ_MANUAL.md  REFERENCES.md  ROOMEQ_101.md  ROOMEQ_INPUT_FORMAT.md  ROOMEQ_MANUAL.md  ROOMEQ_OUTPUT_FORMAT.md  asr-202604.bbcode  asr-202604.md  roon_export_validation.md  roon_manual_iir_manifest.schema.json
examples/: headphone_loss_demo.rs  headphone_loss_validation.rs
scripts/: check_roomeq_subsystem_coverage.py  display-roomeq.py  mdat2csv.py  requirements.txt  run-equalizer-apo-benchmark.ps1  run-pipewire-export-tests.sh  run-roomeq-comparison.sh  run-roomeq-qa-comparison.sh  test_dsp.py  test_mdat2csv.py  test_report.py  validate-pipewire-config.sh
src/: artifact_store.rs  cea2034.rs  cli.rs  constraints.rs  error.rs  fir.rs  initial_guess.rs  lib.rs  loss.rs  optim.rs  param_utils.rs  property_tests.rs  read.rs  response.rs  workflow.rs  x2peq.rs
tests/: autoeq_golden_tests.rs  autoeq_integration_test.rs  broadband_matching_test.rs  channel_matching_defaults_test.rs  cli_de_parameters.rs  fir_tests.rs  (+17 more)
(+746 files in other folders)
