[workspace]
members = [
    "autoeq",
    "autoeq-cea2034",
    "autoeq-env",
    "autoeq-roomsim",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
authors = ["Pierre F. Aubert pierre@spinorama.org"]
description = "Compute EQs for headphone, speakers and subwoofers"
edition = "2024"
documentation = "https://docs.rs/autoeq"
license = "GPL-3.0-or-later"
repository = "https://github.com/pierreaubert/autoeq"

[workspace.dependencies]

# Serialization and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async and networking
# ideally we would use only threads or only tokio
anyhow = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
console_error_panic_hook = { version = "0.1" }
csv = "1.4"
env_logger = "0.11"
hound = "3.5"
log = "0.4"
num_cpus = "1.17"
schemars = "1.2"
strsim = "0.11"
tempfile = "3.23"
thiserror = "2.0.17"

# Optimization and math
ndarray = { version = "0.17", default-features = false, features = ["rayon", "blas", "serde"] }
rand = "0.9.2"
num-complex = "0.4"
metaheuristics-nature = "10.1"
rayon = "1.11"
nlopt = "0.8.1"
rustfft = "6.4"
autoeq-cea2034 = { path = "autoeq-cea2034", version = "0.3" }
autoeq-env = { path = "autoeq-env", version = "0.3" }

math-iir-fir = { version = "0.3" }
math-differential-evolution = { version = "0.3" }
math-bem = { version = "0.3", default-features = false }

# Plotting and visualization
plotly = { version = "0.13.5" }
plotly_static = { version = "0.1" }
build_html = "2.7.0"

# Web/WASM
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.3"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }  # optional, might cause more false positives

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"

[patch.crates-io]
webdriver-downloader = { version = "0.16.4", git = "https://github.com/pierreaubert/webdriver-downloader" }
math-bem = { path = "/Users/pierrre/src.local/math-audio/math-bem" }
math-solvers = { path = "/Users/pierrre/src.local/math-audio/math-solvers" }
math-xem-common = { path = "/Users/pierrre/src.local/math-audio/math-xem-common" }

[profile.dev]
# NOTE: Aggressive optimization settings (opt-level="z", lto=true, strip=true)
# in debug mode cause segfaults in cpal/CoreAudio device enumeration on macOS.
# Using standard debug settings instead.
opt-level = 0
panic = "unwind"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"  # Changed from "abort" to allow tests to run
