[package]
name = "autoeq"
version.workspace = true
description = "Automatic equalization for speakers, headphones and rooms!"
edition = "2024"
keywords = ["audio", "dsp", "eq"]
categories = ["multimedia::audio"]
repository = "https://github.com/pierreaubert/autoeq"
authors = ["Pierre F. Aubert pierre@spinorama.org"]
license = "GPL-3.0-or-later"

[workspace]
resolver = "3"
members = [
    ".",
    "crates/autoeq-core",
    "crates/autoeq-measurements",
    "crates/autoeq-optim",
    "crates/autoeq-workflow",
    "crates/roomeq-model",
    "crates/roomeq-engine",
    "crates/roomeq-export",
]
# Keep the published crate under crates.io's size cap. The excluded paths are
# QA recordings, generated test fixtures, helper shell scripts, and editor
# backups — none are needed to compile the library or the user-facing
# binaries. The QA-only `roomeq-qa-features` binary and the
# `roomeq_generated_data_test` integration test will fail at runtime against
# a published copy because their fixtures are absent; they are meant to run
# from a workspace checkout.
exclude = [
    "data_tests/**",
    "data_generated/**",
    "scripts/**",
    "*~",
    "**/*~",
]

[workspace.package]
version = "0.4.51"

[dependencies]
autoeq-core = { path = "crates/autoeq-core" }
autoeq-measurements = { path = "crates/autoeq-measurements" }
autoeq-optim = { path = "crates/autoeq-optim" }
autoeq-workflow = { path = "crates/autoeq-workflow" }
roomeq-model = { path = "crates/roomeq-model" }
roomeq-engine = { path = "crates/roomeq-engine" }
roomeq-export = { path = "crates/roomeq-export" }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
build_html = "2.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
directories = "6"
env_logger = "0.11"
log = "0.4.28"
num_cpus = "1.17"
num-complex = "0.4"
nalgebra = { version = "0.35", default-features = false, features = ["std"] }
metaheuristics-nature = "10.1"
rustfft = "6.4"
hound = "3.5"
# `plotly` is gated behind the `plotly` feature (off by default). Library code
# under `src/plot/` and the `roomeq-fuzzer` binary require it; the main
# `autoeq` binary degrades gracefully and skips chart generation when off.
plotly = { version = "0.14.1", optional = true }
rand = "0.10.2"
rand_chacha = "0.10.0"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
schemars = "1.2"
strsim = "0.11"
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros", "io-util", "process", "signal"] }
urlencoding = "2.1"
zip = { version = "0.6.6", default-features = false }

# Math-Audio crates from GitHub
math-iir-fir = { git = "https://github.com/pierreaubert/math-audio", version = "0.5" }
math-dsp = { git = "https://github.com/pierreaubert/math-audio", version = "0.5" }
math-optimisation = { git = "https://github.com/pierreaubert/math-audio", version = "0.5" }
math-rir = { git = "https://github.com/pierreaubert/math-audio", version = "0.5" }
sofa-reader = "0.1"

# Core numerical computing
ndarray = { version = "0.17", default-features = false, features = ["rayon", "serde"] }
oxiblas-ndarray = "0.2.1"

# Optional, WebDriver-free static rendering. Charts are emitted as deterministic
# SVG and `resvg` rasterizes them in-process to PNG.
resvg = { version = "0.47", optional = true }
rayon = "1.11"

[features]
default = []
plotly = ["dep:plotly"]
# Static PNG export has no browser, WebDriver, display-server, or network dependency.
plotly_static = ["plotly", "dep:resvg"]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(all(any(target_os = "ios", target_os="ios_sim"), target_arch = "aarch64"))'.dependencies]

[target.'cfg(all(target_os = "linux", target_arch="x86_64"))'.dependencies]

[target.'cfg(all(target_os = "linux", target_arch="aarch64"))'.dependencies]

[target.'cfg(all(target_os = "windows", target_arch="x86_64"))'.dependencies]

[target.'cfg(all(target_os = "windows", target_arch="aarch64"))'.dependencies]

[[bin]]
name = "autoeq"
path = "src/bin/autoeq/main.rs"

[[bin]]
name = "benchmark-autoeq-speaker"
path = "src/bin/autoeq_benchmark_speaker.rs"

[[bin]]
name = "autoeq-download-speakers"
path = "src/bin/autoeq_download_speaker.rs"

[[bin]]
name = "roomeq"
path = "src/bin/roomeq/main.rs"

[[bin]]
name = "roomeq-fuzzer"
path = "src/bin/roomeq_fuzzer.rs"
required-features = ["plotly"]

[[bin]]
name = "roomeq-qa-quality"
path = "src/bin/roomeq_qa_quality.rs"

[[bin]]
name = "roomeq-qa-coverage"
path = "src/bin/roomeq_qa_coverage.rs"

[[bin]]
name = "roomeq-qa-features"
path = "src/bin/roomeq_qa_features.rs"

[[bin]]
name = "roomeq-qa-synthetic"
path = "src/bin/roomeq_qa_synthetic.rs"

[[bin]]
name = "roomeq-qa-acoustic"
path = "src/bin/roomeq_qa_acoustic.rs"

[[bin]]
name = "convert-recording"
path = "src/bin/convert_recording.rs"

[lib]
name = "autoeq"
path = "src/lib.rs"

[[example]]
name = "headphone_loss_demo"
required-features = ["plotly"]

[[example]]
name = "headphone_loss_validation"

[dev-dependencies]
tempfile = "3.23"
assert_fs = "1.0"
proptest = { version = "1.8", default-features = false, features = ["std"] }
serial_test = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }

[profile.release]
# `release` is the everyday optimised profile — used by CI, `just prod-*`,
# benchmarks, and local release iteration. Thin LTO keeps cross-crate inlining
# without the serial bottleneck of fat LTO, and 14 codegen units balance
# parallelism with optimiser visibility.
lto = "thin"
codegen-units = 14
panic = "unwind"

# `dist` is the "cut a release" profile. Inherits everything from `release`
# and tightens for maximum runtime performance at the cost of much longer
# compile time. Use via `cargo build --profile dist` — artifacts land in
# `target/dist/` instead of `target/release/`.
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
