[package]
name = "autoeq-cea2034"
description = "Compute the CEA2034 properties of a loudspeaker also called a Spinorama"
version = "0.2.191"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[lib]
name = "autoeq_cea2034"
path = "src/lib.rs"
