[package]
name = "autoeq-env"
version = "0.2.4"
description = "provide the shared environment for autoeq packages"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true }
