[package]
name = "autoeq-roomsim"
version = "0.3.0"
edition = "2021"
authors = { workspace = true }
description = "Room acoustic simulator"
license = { workspace = true }
repository = { workspace = true }
keywords = ["bem", "boundary-element", "acoustics", "numerical", "room-acoustics"]
categories = ["science", "mathematics", "simulation"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace=true , features = ["derive"] }
serde_json = { workspace = true }
num-complex = { workspace = true , features = ["serde"] }
console_error_panic_hook = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
wasm-bindgen-rayon = { workspace = true }

# Math-BEM with WASM-optimized parallel processing via wasm-bindgen-rayon
math-bem = { workspace = true , default-features = false, features = ["wasm"] }

[dev-dependencies]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
