[package]
name = "autoeq"
version = "0.3.7"
description = "Automatic equalization for speakers, headphones and rooms!"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
build_html = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
num-complex = { workspace = true }
metaheuristics-nature = { workspace = true }
rustfft = { workspace = true }
hound = { workspace = true }
plotly = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.9"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }

# AutoEQ crates
math-iir-fir = { workspace = true }
math-differential-evolution = { workspace = true }
autoeq-cea2034 = { path = "../autoeq-cea2034", version="0.3" }
autoeq-env = { path = "../autoeq-env", version="0.3" }

# Core numerical computing
ndarray = { workspace = true }

# Optional features
nlopt = { workspace = true, optional = true }
plotly_static = { version = "0.1", features = ["chromedriver", "webdriver_download"], optional = true }
rayon.workspace = true

[features]
default = ["nlopt"]
nlopt = ["dep:nlopt"]
plotly_static = ["dep:plotly_static"]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(all(any(target_os = "ios", target_os="ios_sim"), target_arch = "aarch64"))'.dependencies]

[target.'cfg(all(target_os = "linux", target_arch="x86_64"))'.dependencies]

[target.'cfg(all(target_os = "linux", target_arch="aarch64"))'.dependencies]

[target.'cfg(all(target_os = "windows", target_arch="x86_64"))'.dependencies]

[target.'cfg(all(target_os = "windows", target_arch="aarch64"))'.dependencies]

[target.'cfg(fuzzing)'.dependencies]
libfuzzer-sys = "0.4"

# [[bin]]
# name = "autoeq_config"
# path = "fuzz/fuzz_targets/autoeq_config.rs"

# [[bin]]
# name = "autoeq_csv"
# path = "fuzz/fuzz_targets/autoeq_csv.rs"

[[bin]]
name = "autoeq"
path = "bin/autoeq/main.rs"

[[bin]]
name = "benchmark-autoeq-speaker"
path = "bin/autoeq_benchmark_speaker.rs"

[[bin]]
name = "autoeq-download-speakers"
path = "bin/autoeq_download_speaker.rs"

[[bin]]
name = "roomeq"
path = "bin/roomeq/main.rs"

[[bin]]
name = "roomeq-fuzzer"
path = "bin/roomeq_fuzzer.rs"

[lib]
name = "autoeq"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.23"
assert_fs = "1.0"
