[package]
name = "autoeq-measurements"
version = "0.4.47"
edition = "2024"
description = "AutoEQ measurement loading and preprocessing"
license = "GPL-3.0-or-later"

[features]
default = ["api"]
api = []

[dependencies]
autoeq-core = { path = "../autoeq-core" }
async-trait = "0.1"
base64 = "0.22"
directories = "6"
log = "0.4.28"
ndarray = { version = "0.17", default-features = false, features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
strsim = "0.11"
tokio = { version = "1", features = ["fs", "io-util", "sync", "macros", "rt-multi-thread"] }
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.23"
