[package]
name = "autoeq-workflow"
version = "0.4.47"
edition = "2024"
description = "Speaker and headphone AutoEQ workflows"
license = "GPL-3.0-or-later"

[dependencies]
autoeq-core = { path = "../autoeq-core" }
autoeq-measurements = { path = "../autoeq-measurements" }
autoeq-optim = { path = "../autoeq-optim" }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
hound = "3.5"
log = "0.4.28"
ndarray = { version = "0.17", default-features = false, features = ["serde"] }
num_cpus = "1.17"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dev-dependencies]
serial_test = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
