[package]
name = "roomeq-model"
version.workspace = true
edition = "2024"
description = "RoomEQ configuration, pipeline, and DSP-chain contracts"
license = "GPL-3.0-or-later"

[dependencies]
autoeq-core = { path = "../autoeq-core" }
autoeq-measurements = { path = "../autoeq-measurements" }
autoeq-optim = { path = "../autoeq-optim" }
clap = { version = "4.5", features = ["derive"] }
log = "0.4.28"
ndarray = { version = "0.17", default-features = false, features = ["serde"] }
num_cpus = "1.17"
schemars = "1.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
